<resources>
    <string name="app_name">Assemble</string>
    <string name="home_title">Home</string>
    <string name="app_title">Assemble</string>
    <string name="description_logo">logo</string>
    <string name="log_in">Log in</string>
    <string name="email_input_hint">Email</string>
    <string name="pass_input_hint">Password</string>
    <string name="register_link_text"><u>Sign up</u></string>
    <string name="signup_title">Sign in Assemble. It\'s Free.</string>
    <string name="login_message">Login successfully</string>
    <string name="repeat_pass_input_hint">Repeat password</string>
    <string name="register_button_hint">Sign up</string>
    <string name="email_empty">Email is empty</string>
    <string name="pass_empty">Password is empty</string>
    <string name="rep_pass_empty">Repeat password is empty</string>
    <string name="pass_equals">Repeat password is not equal.</string>
    <string name="success_signing_up">Sign up successfully</string>
    <string name="settings_title">Settings</string>
    <string name="signout">Sign out</string>
    <string name="open_drawer_desc">Drawer opened</string>
    <string name="close_drawer_desc">Drawer closed</string>
    <string name="p_menu">Profile</string>
    <string name="profile_title">Profile</string>
    <string name="profile_image_desc">Profile image</string>
    <string name="gatherings_tab_title">Gatherings</string>
    <string name="messages_tab_title">Messages</string>
    <string name="teams_tab_title">Teams</string>
    <string name="help_title">Help</string>
    <string name="account_title">Account</string>
    <string name="signout_dialog_msg">Do you want to sign out?</string>
    <string name="yes_title">Yes</string>
    <string name="no_title">No</string>
    <string name="unknow_error">Unknow Error</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="select_picture">Select picture</string>
    <string name="invalid_email">Enter a valid email address</string>
    <string name="fail_login">Fail Login!</string>
    <string name="invalid_password">Password between 6 and 50 alphanumeric characters</string>
    <string name="update_profile_title">Update Profile</string>
    <string name="username_example">Zombispormedio</string>
    <string name="location_example">Elche</string>
    <string name="biografy_title">Biography</string>
    <string name="birth_date_example">11/09/1994</string>
    <string name="born_at">\'Born at\' MMMM d yyyy</string>
    <string name="lorem_impsum">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</string>
    <string name="hint_username">Username</string>
    <string name="hint_bio">Bio</string>
    <string name="hint_location">Location</string>
    <string name="hint_birthdate">Birthdate</string>
    <string name="save_title">Save</string>
    <string name="update_birthdate_title">Update Birthdate</string>
    <string name="min_birthdate">01/01/1900</string>
    <string name="updating_profile_message">Updating your profile</string>
    <string name="updating_profile_image">Updating profile image</string>
    <string name="reject_changes_title">Reject changes?</string>
    <string name="cancel_title">Cancel</string>
    <string name="delete_title">Delete</string>
    <string name="friends_title">Friends</string>
    <string name="new_friend_title">Find friends</string>
    <string name="example_string">Lorem impsum</string>
    <string name="searching_your_friends">Searching your friends&#8230;</string>
    <string name="loading_app_data">Just a moment…</string>
    <string name="create_meeting_title">Create meeting</string>
    <string name="create_team_title">Create team</string>
    <string name="create_chat_title">Create chat</string>
    <string name="no_more_friends">No more friends</string>
    <string name="new_title">New</string>
    <string name="request_friend_title">Requests</string>
    <string name="no_more_req_friends">No more requests</string>
    <string name="no_more_meetings">No more meetings</string>
    <string name="no_more_teams">No more teams</string>
    <string name="no_more_chats">No more chats</string>
    <string name="new_friend_search_hint">Search by email or name</string>
    <string name="searching_new_friends">One moment. We are searching interesting people…</string>
    <string name="friend_request_sent">Friend request sent</string>
    <string name="friend_accepted">Friend request accepted</string>
    <string name="friend_rejected">Friend request rejected</string>
    <string name="removed_friend">Removed recipient</string>
    <string name="add_participants">Add participants</string>
    <string name="selected_participants">%1$d of %2$d participants</string>
    <string name="need_more_than_one_members">You need more than one member</string>
    <string name="add_name">Add name</string>
    <string name="write_the_name_here">Write the name here…</string>
    <string name="provide_name_and_logo">Provide a <u>name</u> for the team and an icon</string>
    <string name="participants_number">Participants: %1$d /%2$d</string>
    <string name="name_is_needed">Team name is needed</string>
    <string name="creating_team">We are creating your team. A moment, please…</string>
    <string name="titles_people_places">Write titles, people, places…</string>
    <string name="one_string_complete">(%1$s)</string>
    <string name="simple_date">MMMM d yyyy</string>
    <string name="simple_date_with_hours">MMMM d yyyy \'at\' HH:mm </string>
    <string name="all_the_day">All the day</string>
    <string name="simple_date_with_name_of_day">E\',\' MMMM d yyyy</string>
    <string name="simple_hour">HH:mm</string>
    <string name="add_image">Add image</string>
    <string name="creating_meeting">We are creating your meeting. A moment, please…</string>
    <string name="untitled">Untitle</string>
    <string name="date_error_message">Change the initial hour to be before the end of the meeting.</string>
    <string name="ok">OK</string>
    <string name="creating_chat">We are creating your chat. A moment, please…</string>
    <string name="type_your_message">Type your message&#8230;</string>
    <string name="slash_date">dd/MM/yy</string>
    <string name="yesterday">Yesterday</string>
    <string name="message_date">MMMM d yyyy \'·\' HH:mm </string>
    <string name="message_date_today">\'Today ·\' HH:mm</string>
    <string name="message_date_yesterday">\'Yesterday ·\' HH:mm</string>
    <string name="today">Today</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="go_back">Go back</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="buzz">Buzz</string>
    <string name="file">File</string>
    <string name="location">Location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="number_of_chats">%1$d chats</string>

</resources>
