<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zombispormedio.assemble.LoginActivity"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:weightSum="1">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="228dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login_logo"
                android:scaleType="centerInside"
                android:src="@drawable/logo"

                android:contentDescription="@string/description_logo"
                android:adjustViewBounds="true"
                android:minHeight="@dimen/min_logo"
                android:minWidth="@dimen/min_logo"
                android:maxHeight="@dimen/max_logo"
                android:maxWidth="@dimen/max_logo"
                android:layout_gravity="center_horizontal|top" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_title"
                android:id="@+id/title"
                android:textColor="@android:color/white"
                android:textSize="@dimen/login_title"

                android:layout_gravity="center_horizontal|bottom" />

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="146dp"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/email_input"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:textColorHighlight="@color/colorPrimary"
                android:hint="@string/email_input_hint" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/pass_input"
                android:textColorHighlight="@color/colorPrimary"
                android:hint="@string/pass_input_hint"
                android:layout_below="@+id/email_input"
                android:layout_alignParentStart="true"
                android:layout_marginTop="27dp" />

        </RelativeLayout>

    </FrameLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:id="@+id/login_button"
        android:textSize="@dimen/button_text_size"
        android:paddingLeft="75sp"
        android:paddingRight="75sp"
        android:theme="@style/SplashTheme"
        android:layout_marginBottom="25dp"
        android:background="@color/colorAccent"
        android:textColor="@color/abc_primary_text_material_dark"
        android:onClick="Login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_link_text"
        android:id="@+id/register_link"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:textColorLink="@color/colorPrimary"
        android:textIsSelectable="false"
        android:textColorHighlight="@color/colorPrimary"
        android:onClick="SignUp" />


</LinearLayout>
