<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.RegisterActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_title"
            android:id="@+id/register_title"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

    </android.support.v7.widget.Toolbar>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email_input"
        android:textColorHighlight="@color/colorPrimary"
        android:hint="@string/email_input_hint"
        android:layout_below="@+id/my_toolbar"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp"
        android:textSize="25sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:id="@+id/frameLayout"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/email_input"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="166dp"
            android:layout_gravity="right|top"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/pass_input"
                android:textColorHighlight="@color/colorPrimary"
                android:hint="@string/pass_input_hint"
                android:textSize="30sp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/repeat_pass_input"
                android:textColorHighlight="@color/colorPrimary"
                android:hint="@string/repeat_pass_input_hint"
                android:textSize="30sp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="17dp" />

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/registerProgressBar"
                android:layout_above="@+id/repeat_pass_input"
                android:layout_centerHorizontal="true"
                android:visibility="gone" />

        </RelativeLayout>
    </FrameLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_button_hint"
        android:id="@+id/register_button"
        android:textColor="@android:color/white"
        android:textSize="70sp"
        android:background="@color/colorAccent"
        android:layout_below="@+id/frameLayout"
        android:layout_alignParentStart="true"
        android:layout_marginTop="45dp"
        android:layout_alignParentEnd="true"
        android:onClick="Register" />


</RelativeLayout>
