<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/content_second_step_team"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.zombispormedio.assemble.activities.SecondStepTeamActivity"
        tools:showIn="@layout/activity_second_step_team"
        android:orientation="vertical"
        >

    <LinearLayout
            android:id="@+id/viewA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:elevation="4dp"
            >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
            <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/camera_layer_list"
                    android:clickable="true"
                    android:background="?android:attr/selectableItemBackground"
                    />
            <EditText
                    android:id="@+id/name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:imeOptions="actionDone"
                    android:inputType="text|textAutoComplete|textAutoCorrect"
                    android:hint="@string/write_the_name_here"
                    />

        </LinearLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/provide_name_and_logo"
                android:textSize="12sp"
                />
    </LinearLayout>


    <LinearLayout
            android:id="@+id/viewB"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey_300"
            android:orientation="vertical"
            >
        <TextView
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:id="@+id/participants_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/participants_number"
                android:layout_marginBottom="10dp"
                />

        <android.support.v7.widget.RecyclerView
                android:id="@+id/participants_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
    </LinearLayout>

</LinearLayout>
